added index entries to wrangling

--- a/wrangling.Rmd
+++ b/wrangling.Rmd
@@ -51,14 +51,14 @@ This knowledge will helpful in effectively utilizing these objects in our data a
 
 ### What is a data frame?
 
-A data frame \index{data frame} is a table-like structure for storing data in R.  Data frames are
+A data frame \index{data frame!definition} is a table-like structure for storing data in R.  Data frames are
 important to learn about because most data that you will encounter in practice
 can be naturally stored as a table.  In order to define data frames precisely,
 we need to introduce a few technical terms:
 
-- **variable:** a characteristic, number, or quantity that can be measured.
-- **observation:** all of the measurements for a given entity.
-- **value:** a single measurement of a single variable for a given entity.
+- **variable:** a \index{variable} characteristic, number, or quantity that can be measured.
+- **observation:** all \index{observation} of the measurements for a given entity.
+- **value:** a \index{value} single measurement of a single variable for a given entity.
 
 Given these definitions, a **data frame** is a table of values where the rows
 are observations and the columns are variables. For example, Figure
@@ -92,12 +92,12 @@ knitr::include_graphics("img/vectors.jpeg")
 
 ### What is a vector?
 
-In R, **vectors** are objects that can contain one or more elements. The vector
+In R, **vectors** \index{vector}\index{atomic vector|see{vector}} are objects that can contain one or more elements. The vector
 elements are ordered, and they must all be of the same **data type**;
 R has several different basic data types, as shown in Table \@ref(tab:datatype-table).
 Figure \@ref(fig:02-vector) provides an example of a vector where all of the elements are
 of character type.
-You can create vectors in R using the `c` function (`c` stands for "concatenate").  For 
+You can create vectors in R using the `c` function  \index{c function} (`c` stands for "concatenate").  For 
 example, to create the vector `region` as shown in Figure
 \@ref(fig:02-vector), you would write:
 
@@ -131,7 +131,13 @@ Table: (#tab:datatype-table) Basic data types in R
 | logical | lgl | either true or false | `TRUE`, `FALSE` |
 | factor | fct | used to represent data with a limited number of values (usually categories) | a `color` variable with levels `red`, `green` and `orange` |
 
-It is important in R to make sure you represent your data with the correct type.
+It is important in R to make sure you represent your data with the correct type. 
+\index{data types}
+\index{character}\index{chr|see{character}}
+\index{integer}\index{int|see{integer}}
+\index{double}\index{dbl|see{double}}
+\index{logical}\index{lgl|see{logical}}
+\index{factor}\index{fct|see{factor}}
 R, along with many of the `tidyverse` functions we use in this book, treat 
 different data types very differently. You should use integers and double types
 (which both fall under the "numeric" umbrella type) to represent numbers and perform
@@ -149,7 +155,7 @@ and *complex*, but we do not use these in this textbook.
 
 ### What is a list?
 
-Lists are also objects in R that have multiple, ordered elements.
+Lists \index{list} are also objects in R that have multiple, ordered elements.
 Vectors and lists differ by the requirement of element type
 consistency. All elements within a single vector must be of the same type (e.g.,
 all elements are characters), whereas elements within a single list can be of
@@ -161,7 +167,7 @@ knitr::include_graphics("img/vec_vs_list/vec_vs_list.001.jpeg")
 
 ### What does this have to do with data frames?
 
-A data frame is really a special kind of list that follows two rules:
+A data frame \index{data frame!definition} is really a special kind of list that follows two rules:
 
 1. Each element itself must either be a vector or a list. 
 2. Each element (vector or list) must have the same length.
@@ -180,7 +186,7 @@ knitr::include_graphics("img/dataframe/dataframe.001.jpeg")
 ```
 
 The functions from the `tidyverse` package that we use often give us a
-special class of data frame called a *tibble*. Tibbles have some additional
+special class of data frame called a *tibble*. Tibbles have some additional \index{tibble}
 features and benefits over the built-in data frame object. These include the
 ability to add useful attributes (such as grouping, which we will discuss later)
 and more predictable type preservation when subsetting. 
@@ -188,7 +194,7 @@ Because a tibble is just a data frame with some added features,
 we will collectively refer to both built-in R data frames and
 tibbles as data frames in this book.
 
-> You can use the function `class` on a data object to assess whether a data
+> You can use the function `class` \index{class} on a data object to assess whether a data
 > frame is a built-in R data frame or a tibble. If the data object is a data
 > frame, `class` will return `"data.frame"`. If the data object is a
 > tibble it will return `"tbl_df" "tbl" "data.frame"`. You can easily convert
@@ -215,7 +221,7 @@ Table: (#tab:datastructure-table) Basic data structures in R
 ## Tidy data
 
 There are many ways a tabular data set can be organized. This chapter will focus
-on introducing the **tidy data** format of organization and how to make your raw
+on introducing the **tidy data** \index{tidy data!definition} format of organization and how to make your raw
 (and likely messy) data tidy. A tidy data frame satisfies 
 the following three criteria [@wickham2014tidy]:
 
@@ -234,7 +240,7 @@ knitr::include_graphics("img/tidy_data.jpeg")
 There are many good reasons for making sure your data are tidy as a first step in your analysis.
 The most important is that it is a single, consistent format that nearly every function
 in the `tidyverse` recognizes. No matter what the variables and observations 
-in your data represent, as long as the data frame 
+in your data represent, as long as the data frame \index{tidy data!arguments for}
 is tidy, you can manipulate it, plot it, and analyze it using the same tools.
 If your data is *not* tidy, you will have to write special bespoke code
 in your analysis that will not only be error-prone, but hard for others to understand.
@@ -255,7 +261,7 @@ below!
 
 ### Tidying up: going from wide to long using `pivot_longer`
 
-One task that is commonly performed to get data into a tidy format 
+One task that is commonly performed to get data into a tidy format \index{pivot\_longer}
 is to combine values that are stored in separate columns, 
 but are really part of the same variable, into one.
 Data is often stored this way 
@@ -300,9 +306,9 @@ and is usually used during tidying data
 when we need to make the data frame longer and narrower. 
 To learn how to use `pivot_longer`, we will work through an example with the
 `region_lang_top5_cities_wide.csv` data set. This data set contains contains the
-counts of how many Canadians cited each language as their mother tongue for five
+counts of how many Canadians cited each language as their mother tongue for five 
 major Canadian cities (Toronto, Montréal, Vancouver, Calgary and Edmonton) from
-the 2016 Canadian census. 
+the 2016 Canadian census.  \index{Canadian languages}
 To get started, 
 we will load the `tidyverse` package and use `read_csv` to load the (untidy) data.
 
@@ -349,7 +355,7 @@ Vancouver, Calgary, and Edmonton columns into a single column called `region`,
 and create a column called `mother_tongue` that contains the count of how many
 Canadians report each language as their mother tongue for each metropolitan
 area. We use a colon `:` between Toronto and Edmonton to tell R to select all
-the columns between Toronto and Edmonton:
+the columns between Toronto and Edmonton:  \index{colon symbol}\index{colonsymb@\texttt{:}|see{colon symbol}}
 
 ``` {r}
 lang_mother_tidy <- pivot_longer(lang_wide,
@@ -381,7 +387,7 @@ been met:
 
 ### Tidying up: going from long to wide using `pivot_wider` {#pivot-wider}
 
-Suppose we have observations spread across multiple rows rather than in a single
+Suppose we have observations spread across multiple rows rather than in a single \index{pivot\_wider}
 row. For example, in Figure \@ref(fig:long-to-wide), the table on the left is in an
 untidy, long format because the `count` column contains two variables
 (population and commuter count) and information about each observation 
@@ -473,11 +479,11 @@ more columns, and we would see the data set "widen."
 
 ### Tidying up: using `separate` to deal with multiple delimiters  {#separate}
 
-Data are also not considered tidy when multiple values are stored in the same
+Data are also not considered tidy when multiple values are stored in the same \index{separate}
 cell. The data set we show below is even messier than the ones we dealt with
 above: the `Toronto`, `Montréal`, `Vancouver`, `Calgary` and `Edmonton` columns
 contain the number of Canadians reporting their primary language at home and
-work in one column separated by the delimiter (`/`). The column names are the
+work in one column separated by the delimiter (`/`). The column names are the \index{delimiter}
 values of a variable, *and* each value does not have its own cell! To turn this
 messy data into tidy data, we'll have to fix these issues.
 
@@ -567,7 +573,7 @@ indicating they are integer data types (i.e., numbers)!
 
 ## Using `select` to extract a range of columns
 
-Now that our `tidy_lang` data is indeed *tidy*, we can start manipulating it
+Now that our `tidy_lang` data is indeed *tidy*, we can start manipulating it \index{select!helpers}
 using the powerful suite of functions from the `tidyverse`. 
 For the first example, recall the `select` function from Chapter \@ref(intro), 
 which lets us create a subset of columns from a data frame. 
@@ -586,7 +592,7 @@ time-consuming, especially if you have a lot of columns! Another approach is to
 use a "select helper". Select helpers are operators that make it easier for
 us to select columns. For instance, we can use a select helper to choose a
 range of columns rather than typing each column name out. To do this, we use the
-colon (`:`) operator to denote the range. For example, to get all the columns in
+colon (`:`) operator to denote the range. For example, to get all the columns in \index{colon symbol}
 the `tidy_lang` data frame from `language` to `most_at_work` we pass
 `language:most_at_work` as the second argument to the `select` function.
 
@@ -602,7 +608,7 @@ is especially handy for large data sets.
 Suppose instead we wanted to extract columns that followed a particular pattern
 rather than just selecting a range. For example, let's say we wanted only to select the
 columns `most_at_home` and `most_at_work`. There are other helpers that allow
-us to select variables based on their names. In particular, we can use the `select` helper
+us to select variables based on their names. In particular, we can use the `select` helper \index{select!starts\_with}
 `starts_with` to choose only the columns that start with the word "most":
 
 ``` {r 02-select-helpers}
@@ -611,7 +617,7 @@ select(tidy_lang, starts_with("most"))
 
 We could also have chosen the columns containing an underscore `_` by adding
 `contains("_")` as the second argument in the `select` function, since we notice
-the columns we want contain underscores and the others don't.
+the columns we want contain underscores and the others don't. \index{select!contains}
 
 ``` {r 02-select-helper-contains}
 select(tidy_lang, contains("_"))
@@ -627,7 +633,7 @@ provides a comprehensive resource on `select` helpers.
 Next, we revisit the `filter` function from Chapter \@ref(intro), 
 which lets us create a subset of rows from a data frame. 
 Recall the two main arguments to the `filter` function:
-the first is the name of the data frame object, and
+the first is the name of the data frame object, and \index{filter!logical statements}
 the second is a *logical statement* to use when filtering the rows.
 `filter` works by returning the rows  where the logical statement evaluates to `TRUE`.
 This section will highlight more advanced usage of the `filter` function.
@@ -773,7 +779,7 @@ than French in Montréal according to the 2016 Canadian census.
 ### Using `mutate` to modify columns
 In Section \@ref(separate), 
 when we first read in the `"region_lang_top5_cities_messy.csv"` data 
-all of the variables were "character" data types. 
+all of the variables were "character" data types. \index{mutate}
 During the tidying process, 
 we used the `convert` argument from the `separate` function 
 to convert the `most_at_home` and `most_at_work` columns 
@@ -956,7 +962,7 @@ home.  However, in Montréal, this does not seem to be the case!
 In R, we often have to call multiple functions in a sequence to process a data
 frame. The basic ways of doing this can become quickly unreadable if there are
 many steps. For example, suppose we need to perform three operations on a data
-frame `data`:
+frame `data`:  \index{pipe}\index{pipesymb@\texttt{|>}|see{pipe}}
 
 1)  add a new column `new_col` that is double another `old_col`
 2)  filter for rows where another column, `other_col`, is more than 5, and
@@ -1017,7 +1023,7 @@ output <- data |>
 > **Note:** In this textbook, we will be using the base R pipe operator syntax, `|>`.
 > This base R `|>` pipe operator was inspired by a previous version of the pipe
 > operator, `%>%`. The `%>%` pipe operator is not built into R 
-> and is from the `magrittr` R package.
+> and is from the `magrittr` R package. \index{pipesymbb@\texttt{%>%}|see{pipe}}
 > The `tidyverse` metapackage imports the `%>%` pipe operator via `dplyr` 
 > (which in turn imports the `magrittr` R package).
 > In more advanced R use related to sharing and distributing code as R packages,
@@ -1095,7 +1101,7 @@ For example, we can pipe together three functions to:
 from smallest to largest.
 
 As we saw in Chapter \@ref(intro), 
-we can use the `tidyverse` `arrange` function 
+we can use the `tidyverse` `arrange` function \index{arrange}
 to order the rows in the data frame by the values of one or more columns. 
 Here we pass the column name `most_at_home` to arrange 
 to order the data frame rows by the values in that column, in ascending order.
@@ -1136,7 +1142,7 @@ before moving on with further steps.
 ### Calculating summary statistics on whole columns
 
 As a part of many data analyses, we need to calculate a summary value for the
-data (a *summary statistic*). 
+data (a *summary statistic*). \index{summarize}
 Examples of summary statistics we might want to calculate 
 are the number of observations, the average/mean value for a column, 
 the minimum value, etc. 
@@ -1189,7 +1195,7 @@ people.
 In data frames in R, the value `NA` is often used to denote missing data. 
 Many of the base R statistical summary functions 
 (e.g., `max`, `mix`, `mean`, `sum`, etc) will return `NA` 
-when applied to columns containing `NA` values.
+when applied to columns containing `NA` values. \index{missing data}\index{NA|see{missing data}}
 Usually that is not what we want to happen; 
 instead, we would usually like R to ignore the missing entries
 and calculate the summary statistic using all of the other non-`NA` values
@@ -1230,7 +1236,7 @@ summarize(region_lang_na,
 
 ### Calculating summary statistics for groups of rows
 
-A common pairing with `summarize` is `group_by`. Pairing these functions
+A common pairing with `summarize` is `group_by`. Pairing these functions \index{group\_by}
 together can let you summarize values for subgroups within a data set,
 as illustrated in Figure \@ref(fig:summarize-groupby). 
 For example, we can use `group_by` to group the regions of the `tidy_lang` data frame
@@ -1289,8 +1295,8 @@ To summarize statistics across many columns, we can use the
 `summarize` function we have just recently learned about.
 However, in such a case, using `summarize` alone means that we have to 
 type out the name of each column we want to summarize. 
-To do this more efficiently, we can pair `summarize` with `across`
-and use a colon `:` to specify a range of columns we would like 
+To do this more efficiently, we can pair `summarize` with `across` \index{across}
+and use a colon `:` to specify a range of columns we would like  \index{colon symbol}
 to perform the statistical summaries on.
 Here we demonstrate finding the maximum value 
 of each of the numeric
@@ -1309,7 +1315,7 @@ region_lang |>
 > the use of the `summarize` + `across` functions paired 
 > with base R statistical summary functions
 > also return `NA`s when we apply them to columns that 
-> contain `NA`s in the data frame. 
+> contain `NA`s in the data frame.  \index{missing data}
 > 
 > To avoid this, again we need to add the argument `na.rm = TRUE`,
 > but in this case we need to use it a little bit differently.
@@ -1325,7 +1331,7 @@ region_lang |>
 #### `map` for calculating summary statistics on many columns {-}
 
 An alternative to `summarize` and `across` 
-for applying a function to many columns is the `map` family of functions.
+for applying a function to many columns is the `map` family of functions. \index{map}
 Let's again find the maximum value of each column of the
 `region_lang` data frame, but using `map` with the `max` function this time.
 `map` takes two arguments: 
@@ -1361,7 +1367,7 @@ simpler alternative is to just use a different `map` function. There
 are quite a few to choose from, they all work similarly, but
 their name reflects the type of output you want from the mapping operation.
 Table \@ref(tab:map-table) lists the commonly-used `map` functions as well
-as their output type.
+as their output type. \index{map!map\_\* functions}
 
 Table: (#tab:map-table) The `map` functions in R.
 
@@ -1390,7 +1396,7 @@ region_lang |>
 > (e.g., `max`, `mix`, `mean`, `sum`, etc) with `summarize`, 
 > `map` functions paired with base R statistical summary functions
 > also return `NA` values when we apply them to columns that 
-> contain `NA` values.
+> contain `NA` values. \index{missing data}
 > 
 > To avoid this, again we need to add the argument `na.rm = TRUE`.
 > When we use this with `map` we do this by adding a `,` 
@@ -1433,7 +1439,7 @@ we can see that this would be the columns from `mother_tongue` to `lang_known`.
 region_lang
 ```
 
-To accomplish such a task, we can use `mutate` paired with `across`.
+To accomplish such a task, we can use `mutate` paired with `across`. \index{across}
 This works in a similar way for column selection, 
 as we saw when we used `summarize` + `across` earlier.
 As we did above, 
@@ -1470,7 +1476,7 @@ In other words, we want to apply the `max` function *row-wise.*
 We will use the (aptly named) `rowwise` function in combination with `mutate` 
 to accomplish this task. 
 
-Before we apply `rowwise`, we will `select` only the count columns 
+Before we apply `rowwise`, we will `select` only the count columns \index{rowwise}
 so we can see all the columns in the data frame's output easily in the book. 
 So for this demonstration, the data set we are operating on looks like this:
 
