fixed assigbnment symbol index entry order

--- a/intro.Rmd
+++ b/intro.Rmd
@@ -257,7 +257,7 @@ to the data frame that `read_csv` outputs,
 so that we can refer to it later for analysis and visualization.
 
 The way to assign a name to a value in R is via the *assignment symbol* `<-`. 
-\index{leftarrow@\texttt{<-}|see{assignment symbol}}\index{assignment symbol}
+\index{assignsymb@\texttt{<-}|see{assignment symbol}}\index{assignment symbol}
 On the left side of the assignment symbol you put the name that you want
 to use, and on the right side of the assignment symbol
 you put the value that you want the name to refer to.
