minor ed to wrangling

--- a/wrangling.Rmd
+++ b/wrangling.Rmd
@@ -1551,7 +1551,7 @@ Table: (#tab:summary-functions-table) Summary of wrangling functions
 | `select` | subsets columns of a data frame |
 | `summarize` | calculates summaries of inputs | 
 
-## Additional resources {#additionalresourceswrangling}
+## Additional resources 
 
   - As we mentioned earlier, `tidyverse` is actually a *R
     meta package*: it installs and loads a collection of R packages that all
