--- a/wrangling.Rmd
+++ b/wrangling.Rmd
@@ -640,7 +640,7 @@ This section will highlight more advanced usage of the `filter` function.
 In particular, this section provides an in-depth treatment of the variety of logical statements
 one can use in the `filter` function to select subsets of rows.
 
-### Using `filter` to extract rows with `==`
+### Extracting rows that have a certain value with `==`
 Suppose we are only interested in the subset of rows in `tidy_lang` corresponding to the
 official languages of Canada (English and French).
 We can `filter` for these rows by using the *equivalency operator* (`==`) 
@@ -658,7 +658,7 @@ official_langs <- filter(tidy_lang, category == "Official languages")
 official_langs
 ```
 
-### Using `filter` to extract rows with `!=`
+### Extracting rows that do not have a certain value with `!=`
 
 What if we want all the other language categories in the data set *except* for
 those in the "Official languages" category? We can accomplish this with the `!=` 
@@ -670,7 +670,7 @@ below.
 filter(tidy_lang, category != "Official languages")
 ```
 
-### Using `filter` to extract rows that satisfy mutliple conditions using `,` {#filter-and}
+### Extracting rows satisfying multiple conditions using `,` or `&` {#filter-and}
 
 Suppose now we want to look at only the rows 
 for the French language in Montréal. 
@@ -686,7 +686,17 @@ to subset the rows where `region == "Montréal"`
 filter(official_langs, region == "Montréal", language == "French")
 ```
 
-### Using `filter` to extract rows with `|`
+We can also use the `&` logical operator, which gives 
+us cases where *both* one condition *and* another condition
+are satisfied. You can use either `,` or `&` in the `filter`
+function interchangeably.
+
+``` {r}
+filter(official_langs, region == "Montréal" & language == "French")
+```
+
+
+### Extracting rows satisfying at least one of multiple conditions using `|`
 
 Suppose we were interested in the rows for only the Albertan cities 
 in our `official_langs` data set (Edmonton and Calgary). 
@@ -702,7 +712,7 @@ where the `region` columns are equal to "Calgary" *or* "Edmonton".
 filter(official_langs, region == "Calgary" | region == "Edmonton")
 ```
 
-### Using `filter` to extract rows with `%in%`
+### Extracting rows with values in a vector using `%in%`
 
 Next, suppose we want to see the populations of our five cities. 
 Let's read in the `region_data.csv` file 
@@ -748,7 +758,7 @@ five_cities
 >c("Vancouver", "Toronto") %in% c("Toronto", "Vancouver")
 >```
 
-### Using `filter` to extract rows with values above or below a threshold
+### Extracting rows with values above or below a threshold using `>` and `<`
 
 ``` {r changing_the_units, include = FALSE}
 census_popn <- 35151728
