addressing melissa PR comments

--- a/wrangling.Rmd
+++ b/wrangling.Rmd
@@ -131,17 +131,17 @@ Table: (#tab:datatype-table) Basic data types in R
 | logical | lgl | either true or false | `TRUE`, `FALSE` |
 | factor | fct | used to represent data with a limited number of values (usually categories) | a `color` variable with levels `red`, `green` and `orange` |
 
-It is important in R to make sure you represent your data with the correct type. 
 \index{data types}
 \index{character}\index{chr|see{character}}
 \index{integer}\index{int|see{integer}}
 \index{double}\index{dbl|see{double}}
 \index{logical}\index{lgl|see{logical}}
 \index{factor}\index{fct|see{factor}}
-R, along with many of the `tidyverse` functions we use in this book, treat 
+It is important in R to make sure you represent your data with the correct type. 
+R, along with many of the `tidyverse` functions we use in this book, treats 
 different data types very differently. You should use integers and double types
 (which both fall under the "numeric" umbrella type) to represent numbers and perform
-arithmetic. Doubles are more common, though; for instance, a double data type is the
+arithmetic. Doubles are more common than integers in R, though; for instance, a double data type is the
 default when you create a vector of numbers using `c()`, and when you read in
 whole numbers via `read_csv`. Characters are used to represent data that should
 be thought of as "text", such as words, names, paths, URLs, and more. Factors help us
@@ -251,13 +251,13 @@ upfront. Fortunately, there are many well-designed `tidyverse` data
 cleaning/wrangling tools to help you easily tidy your data. Let's explore them
 below!
 
-> **Note:** Is there only one shape for tidy data for a given data set? Not necessarily! It
-> depends on the statistical question you are asking and what the variables are
-> for that question. For tidy data, each variable should be its own column. So,
-> just as it's essential to match your statistical question with the appropriate
-> data analysis tool (classification, clustering, hypothesis testing, etc) it's
-> important to match your statistical question with the appropriate variables and
-> ensure they are represented as individual columns to make the data tidy.
+> **Note:** Is there only one shape for tidy data for a given data set? Not
+> necessarily! It depends on the statistical question you are asking and what
+> the variables are for that question. For tidy data, each variable should be
+> its own column. So, just as it's essential to match your statistical question
+> with the appropriate data analysis tool, it's important to match your
+> statistical question with the appropriate variables and ensure they are
+> represented as individual columns to make the data tidy.
 
 ### Tidying up: going from wide to long using `pivot_longer`
 
@@ -649,7 +649,7 @@ with the value `"Official languages"`.
 With these arguments, `filter` returns a data frame with all the columns 
 of the input data frame 
 but only the rows we asked for in our logical filter statement, i.e., 
-those where the `category` column holds the value `""Official languages"`.
+those where the `category` column holds the value `"Official languages"`.
 We name this data frame `official_langs` and will primarily focus on this 
 data frame for the remainder of this chapter.
 
@@ -661,9 +661,9 @@ official_langs
 ### Extracting rows that do not have a certain value with `!=`
 
 What if we want all the other language categories in the data set *except* for
-those in the "Official languages" category? We can accomplish this with the `!=` 
+those in the `"Official languages"` category? We can accomplish this with the `!=` 
 operator, which means "not equal to". So if we want to find all the rows
-where the `category` does *not* equal "Official languages" we write the code
+where the `category` does *not* equal `"Official languages"` we write the code
 below.
 
 ``` {r}
@@ -676,7 +676,7 @@ Suppose now we want to look at only the rows
 for the French language in Montréal. 
 To do this, we need to filter the data set 
 to find rows that satisfy multiple conditions simultaneously. 
-We can do this with `,`, which in the case of `filter` 
+We can do this with the comma symbol (`,`), which in the case of `filter` 
 is interpreted by R as "and". 
 We write the code as shown below to filter the `official_langs` data frame 
 to subset the rows where `region == "Montréal"` 
@@ -686,9 +686,9 @@ to subset the rows where `region == "Montréal"`
 filter(official_langs, region == "Montréal", language == "French")
 ```
 
-We can also use the `&` logical operator, which gives 
+We can also use the ampersand (`&`) logical operator, which gives 
 us cases where *both* one condition *and* another condition
-are satisfied. You can use either `,` or `&` in the `filter`
+are satisfied. You can use either comma (`,`) or ampersand (`&`) in the `filter`
 function interchangeably.
 
 ``` {r}
@@ -702,7 +702,7 @@ Suppose we were interested in the rows for only the Albertan cities
 in our `official_langs` data set (Edmonton and Calgary). 
 We can't use `,` as we did above because `region`
 cannot be both Edmonton *and* Calgary simultaneously. 
-Instead, we can use the `|` logical operator, 
+Instead, we can use the vertical pipe (`|`) logical operator, 
 which gives us the cases where one condition *or* 
 another condition *or* both are satisfied. 
 In the code below, we ask R to return the rows
@@ -886,7 +886,7 @@ in Toronto.
 Let's use `mutate` to create a new column in our data frame 
 that holds the proportion of people who speak English 
 for our five cities of focus in this chapter. 
-To accomplish this, we will need to do 2 tasks 
+To accomplish this, we will need to do two tasks 
 beforehand:
 
 1. create a vector containing the population values for our cities
@@ -944,7 +944,7 @@ statistical analyses to answer questions about our data! Let's suppose we want t
 answer the question "what proportion of people in each city speak English 
 as their primary language at home in these five cities?" Since our data is
 cleaned already, in a few short lines of code, we can use `ggplot` to create a
-data visualization to answer this question! Here we create a bar chart to represent the proportions for
+data visualization to answer this question! Here we create a bar plot to represent the proportions for
 each region and color the proportions by language.
 
 > Don't worry too much about the code to make this plot for now. We will cover 
@@ -972,14 +972,14 @@ home.  However, in Montréal, this does not seem to be the case!
 In R, we often have to call multiple functions in a sequence to process a data
 frame. The basic ways of doing this can become quickly unreadable if there are
 many steps. For example, suppose we need to perform three operations on a data
-frame `data`:  \index{pipe}\index{pipesymb@\texttt{|>}|see{pipe}}
+frame called `data`:  \index{pipe}\index{pipesymb@\texttt{|>}|see{pipe}}
 
 1)  add a new column `new_col` that is double another `old_col`
 2)  filter for rows where another column, `other_col`, is more than 5, and
 3)  select only the new column `new_col` for those rows.
 
-One way of doing is to just write multiple lines of code, storing temporary
-objects as you go:
+One way of performing these three steps is to just write 
+multiple lines of code, storing temporary objects as you go:
 
 ``` {r eval = FALSE}
 output_1 <- mutate(data, new_col = old_col * 2)
@@ -1033,7 +1033,7 @@ output <- data |>
 > **Note:** In this textbook, we will be using the base R pipe operator syntax, `|>`.
 > This base R `|>` pipe operator was inspired by a previous version of the pipe
 > operator, `%>%`. The `%>%` pipe operator is not built into R 
-> and is from the `magrittr` R package. \index{pipesymbb@\texttt{%>%}|see{pipe}}
+> and is from the `magrittr` R package. 
 > The `tidyverse` metapackage imports the `%>%` pipe operator via `dplyr` 
 > (which in turn imports the `magrittr` R package).
 > In more advanced R use related to sharing and distributing code as R packages,
@@ -1043,6 +1043,8 @@ output <- data |>
 > as it still commonly used in data analysis code and in many data science 
 > books and other resources.
 > In most cases these two pipes are interchangeable and either can be used.
+
+\index{pipesymbb@\texttt{%>%}|see{pipe}}
 
 ### Using `|>` to combine `filter` and `select`
 
@@ -1204,7 +1206,7 @@ people.
 
 In data frames in R, the value `NA` is often used to denote missing data. 
 Many of the base R statistical summary functions 
-(e.g., `max`, `mix`, `mean`, `sum`, etc) will return `NA` 
+(e.g., `max`, `min`, `mean`, `sum`, etc) will return `NA` 
 when applied to columns containing `NA` values. \index{missing data}\index{NA|see{missing data}}
 Usually that is not what we want to happen; 
 instead, we would usually like R to ignore the missing entries
@@ -1321,7 +1323,7 @@ region_lang |>
 > **when there are `NA`s**:
 > 
 > Similarly to when we use base R statistical summary functions 
-> (e.g., `max`, `mix`, `mean`, `sum`, etc) with `summarize` alone, 
+> (e.g., `max`, `min`, `mean`, `sum`, etc) with `summarize` alone, 
 > the use of the `summarize` + `across` functions paired 
 > with base R statistical summary functions
 > also return `NA`s when we apply them to columns that 
@@ -1403,7 +1405,7 @@ region_lang |>
 > **Note on calculating summary statistics with `map` when there are `NA`s**:
 > 
 > Similarly to when we use base R statistical summary functions 
-> (e.g., `max`, `mix`, `mean`, `sum`, etc) with `summarize`, 
+> (e.g., `max`, `min`, `mean`, `sum`, etc) with `summarize`, 
 > `map` functions paired with base R statistical summary functions
 > also return `NA` values when we apply them to columns that 
 > contain `NA` values. \index{missing data}
