more handling melissa comments in wrangling index PR

--- a/wrangling.Rmd
+++ b/wrangling.Rmd
@@ -138,19 +138,18 @@ Table: (#tab:datatype-table) Basic data types in R
 \index{logical}\index{lgl|see{logical}}
 \index{factor}\index{fct|see{factor}}
 It is important in R to make sure you represent your data with the correct type. 
-R, along with many of the `tidyverse` functions we use in this book, treats 
-different data types very differently. You should use integers and double types
+Many of the `tidyverse` functions we use in this book treat 
+the various data types differently. You should use integers and double types
 (which both fall under the "numeric" umbrella type) to represent numbers and perform
 arithmetic. Doubles are more common than integers in R, though; for instance, a double data type is the
 default when you create a vector of numbers using `c()`, and when you read in
 whole numbers via `read_csv`. Characters are used to represent data that should
 be thought of as "text", such as words, names, paths, URLs, and more. Factors help us
-represent categorical data, and can take one of a set of discrete
-values known as *levels*. The levels can be ordered or unordered.  Even though
+encode variables that represent *categories*; a factor variable takes one of a discrete
+set of values known as *levels* (one for each category). The levels can be ordered or unordered.  Even though
 factors can sometimes *look* like characters, they are not used to represent
 text, words, names, and paths in the way that characters are; in fact, R
-internally stores factors using integers! It is important to use factors&mdash;not characters&mdash;to
-store categorical data. There are other basic data types in R, such as *raw*
+internally stores factors using integers! There are other basic data types in R, such as *raw*
 and *complex*, but we do not use these in this textbook.
 
 ### What is a list?
@@ -650,8 +649,7 @@ With these arguments, `filter` returns a data frame with all the columns
 of the input data frame 
 but only the rows we asked for in our logical filter statement, i.e., 
 those where the `category` column holds the value `"Official languages"`.
-We name this data frame `official_langs` and will primarily focus on this 
-data frame for the remainder of this chapter.
+We name this data frame `official_langs`.
 
 ``` {r}
 official_langs <- filter(tidy_lang, category == "Official languages")
@@ -937,6 +935,8 @@ Failing to do this would have resulted in the incorrect math to be performed.
 > We link to resources that discuss this in the additional
 > resources at the end of this chapter.
 
+
+<!--
 #### Creating a visualization with tidy data {-}
 
 Now that we have cleaned and wrangled our data, we can make visualizations or do 
@@ -950,22 +950,22 @@ each region and color the proportions by language.
 > Don't worry too much about the code to make this plot for now. We will cover 
 > visualizations in detail in Chapter \@ref(viz).
 
-```{r 02-plot, out.width = "70%", fig.cap = "Proportions of Canadians reporting English as the most often spoken language at home."}
+```{r 02-plot, out.width = "70%", fig.cap = "Bar plot of proportions of Canadians reporting English as the most often spoken language at home."}
 ggplot(english_langs,
   aes(
-    x = most_at_home_proportion,
-    y = region,
-    fill = language
+    x = region, 
+    y = most_at_home_proportion
   )
  ) +
   geom_bar(stat = "identity") +
-  xlab("Proportion reporting they speak English most often at home") +
-  ylab("Region")
+  xlab("Region") +
+  ylab("Proportion of Canadians that speak English most often at home")
 ```
 
 From this visualization, we can see that in Calgary, Edmonton, Toronto, and
 Vancouver, English was reported as the most common primary language used at
 home.  However, in Montréal, this does not seem to be the case!
+-->
 
 ## Combining functions using the pipe operator, `|>`
 
@@ -1218,13 +1218,15 @@ In particular, if we specify `na.rm = TRUE`, the function will ignore
 missing values and return a summary of all the non-missing entries.
 We show an example of this combined with `summarize` below.
 
-First we create a seemingly innocuous `NA` 
-in the first row of the `region_lang` data frame, 
-in the `most_at_home column`:
+First we create a new version of the `region_lang` data frame,
+named `region_lang_na`, that has a seemingly innocuous `NA` 
+in the first row of the `most_at_home column`:
 
-```{r}
+```{r, echo = FALSE, message = FALSE, warning = FALSE}
 region_lang_na <- region_lang
 region_lang_na[["most_at_home"]][1] <- NA
+```
+```{r}
 region_lang_na
 ```
 
@@ -1431,8 +1433,7 @@ section at the end of this chapter.
 ## Apply functions across many columns with `mutate` and `across`
 
 Sometimes we need to apply a function to many columns in a data frame. 
-This is a common task when converting units of measurement across many columns, 
-and when standardizing data before modelling. 
+For example, we would need to do this when converting units of measurements across many columns. 
 We illustrate such a data transformation in Figure \@ref(fig:mutate-across).
 
 ```{r mutate-across, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "`mutate` and `across` is useful for applying functions across many columns. The darker, top row of each table represents the column headers.", out.width="100%", fig.retina = 2}
