--- a/viz.Rmd
+++ b/viz.Rmd
@@ -55,7 +55,7 @@ As with most coding tasks, it is totally fine (and quite common) to make mistake
 
 - **line plots** visualize trends with respect to an independent, ordered quantity (e.g. time)
 - **histograms** visualize the distribution of one quantitative variable (i.e., all its possible values and how often they occur) 
-- **scatter plots** visualize the distribution / relationship of two quantitative variables
+- **scatter plots** visualize the relationship between two quantitative variables
 - **bar plots** visualize comparisons of amounts
 
 All types of visualization have their (mis)uses, but three kinds are usually hard to understand or are easily replaced with an oft-better alternative.
@@ -85,7 +85,7 @@ making it easier for them to understand and remember your message quickly.
 **Minimize noise**
 
 - Use colours sparingly. Too many different colours can be distracting, create false patterns, and detract from the message. 
-- Be wary of overplotting. If your plot has too many dots or lines and starts to look like a mess, you need to do something different.
+- Be wary of overplotting. Overplotting is when marks that represent the data overlap, and is problematic as it prevents you from seeing how many data points are represented in areas of the visualization where this occurs. If your plot has too many dots or lines and starts to look like a mess, you need to do something different.
 - Only make the plot area (where the dots, lines, bars are) as big as needed. Simple plots can be made small.
 - Don't adjust the axes to zoom in on small differences. If the difference is small, show that it's small!
 
@@ -320,18 +320,27 @@ The `islands.csv` data set \index{Island landmasses} contains a list of Earth's 
 
 **Question:** \index{question!visualization} Are the continents (North / South America, Africa, Europe, Asia, Australia, Antarctica) Earth's seven largest landmasses? If so, what are the next few largest landmasses after those?
 
+```{r, echo = FALSE, message = FALSE, warning = FALSE}
+islands_df <- read_csv("data/islands.csv")
+continents <- c("Africa", "Antarctica", "Asia", "Australia", 
+                "Europe", "North America", "South America")
+islands_df <- mutate(islands_df, 
+                     landmass_type = ifelse(landmass %in% continents, "Continent", "Other"))
+write_csv(islands_df, "data/islands.csv")
+```
+
 ```{r 03-data-islands, warning=FALSE, message=FALSE}
 # islands data
 islands_df <- read_csv("data/islands.csv")
 islands_df
 ```
 
-Here, we have a list of Earth's landmasses, 
+Here, we have a data frame of Earth's landmasses, 
 and are trying to compare their sizes. 
 The right type of visualization to answer this question is a bar plot. 
 A bar plot uses a rectangle to encode the value a summary statistic 
 (usually a size, count, proportion or percentage).
-They are particulary useful for comparing summary statistics between different
+They are particularly useful for comparing summary statistics between different
 groups of a categorical variable.
 An example of a bar plot is shown in Figure \@ref(fig:bar-plot-sketch).
 
@@ -369,29 +378,47 @@ islands_bar <- ggplot(islands_top12, aes(x = size, y = landmass)) +
 islands_bar
 ```
 
-The plot in Figure \@ref(fig:03-data-islands-bar-2) is definitely clearer now, and allows us to answer our question ("are the top 7 largest landmasses continents?") in
-the affirmative. But the question could be made clearer from the plot by organizing the bars not by alphabetical order
-but by size, and to colour them based on whether they are a continent. To do this, we 
-use `mutate` to add a column to the data regarding whether or not the landmass is a continent:
-\index{c function}
-\index{mutate}
+The plot in Figure \@ref(fig:03-data-islands-bar-2) is definitely clearer now, 
+and allows us to answer our question 
+("are the top 7 largest landmasses continents?") in the affirmative. 
+But the question could be made clearer from the plot 
+by organizing the bars not by alphabetical order
+but by size, and to colour them based on whether they are a continent. 
+The data for this is stored in the `landmass_type` column. 
+To use this to colour the bars, 
+we add the `fill` argument to the aesthetic mapping 
+and set it to `landmass_type`. 
 
-```{r 03-data-islands-bar-3, warning=FALSE, message=FALSE}
-islands_top12 <- slice_max(islands_df, order_by = size, n = 12)
-continents <- c("Africa", "Antarctica", "Asia", "Australia", "Europe", "North America", "South America")
-islands_ct <- mutate(islands_top12, is_continent = ifelse(landmass %in% continents, "Continent", "Other"))
-islands_ct
-```
+To organize the landmasses by their `size` variable, 
+we will use the `tidyverse` `fct_reorder` function
+in the aesthetic mapping to organize the landmasses by their `size` variable.
+The first argument passed to `fct_reorder` is the factor columns's name, 
+whose level's we would like to reorder (here `landmass`). 
+The second argument passed is the column name 
+that holds the values we would like to use to do the ordering (here `size`).
+`fct_reorder` orders by that column in ascending order by default, 
+but this can be changed to sorting in descending order 
+by setting  `.desc = TRUE`.
+We do this here so that the largest bar will closet to the axis line,
+as that is more visually appealing.
 
-In order to colour the bars, we add the `fill` argument to the aesthetic mapping. Then we use the `reorder` 
-function in the aesthetic mapping to organize the landmasses by their `size` variable.
-Finally, we \index{ggplot!reorder}\index{ggplot!labs} use the `labs` and `theme` functions to add labels, change the font size, and position the legend:
+To label the x and y axes, we shift from using `xlab` and `ylab`, 
+to specifying these within the `labs` function. 
+We do this here because we would also like to change the legend label.
+The default label is the column name of the column being mapped to `fill`,
+however `landmass_type` is not very human readable or visually pleasing.
+Thus we use the `fill` argument inside `labs` to change that to "Type".
+Finally, we again \index{ggplot!reorder} use the `theme` function 
+to change the font size:
 
-```{r 03-data-islands-bar-4, warning=FALSE, message=FALSE, fig.cap = "Bar plot of size for Earth's largest 12 landmasses coloured by whether its a continent with clearer axes and labels"}
-islands_bar <- ggplot(islands_ct, aes(x = size, y = reorder(landmass, size), fill = is_continent)) +
+```{r 03-data-islands-bar-4, warning = FALSE, message = FALSE, fig.width = 8, fig.cap = "Bar plot of size for Earth's largest 12 landmasses coloured by whether its a continent with clearer axes and labels"}
+islands_bar <- ggplot(islands_top12, 
+                      aes(x = size,
+                          y = fct_reorder(landmass, size, .desc = TRUE), 
+                          fill = landmass_type)) +
   geom_bar(stat = "identity") +
   labs(x = "Size (1000 square mi)", y = "Landmass",  fill = "Type") +
-  theme(text = element_text(size = 18), legend.position = c(0.75, 0.45))
+  theme(text = element_text(size = 18))
 islands_bar
 ```
 
@@ -541,15 +568,16 @@ ggplot(can_lang, aes(x = most_at_home_percent, y = mother_tongue_percent, color 
   scale_y_log10(labels = scales::comma)
 ```
 
-In Figure \@ref(fig:03-scatter-colour-by-category), the points are coloured with the default `ggplot2` colour palette. But what if you want to use different colours? In R, one package that provides alternative colour palettes \index{color palette} is `RColorBrewer` [@RColorBrewer]. You can visualize the list of colour palettes that `RColorBrewer` has to offer with the `display.brewer.all()` function. You can also print a list of colour blind friendly palettes by adding `colorblindFriendly = T` to the function.
+In Figure \@ref(fig:03-scatter-colour-by-category), the points are coloured with the default `ggplot2` colour palette. But what if you want to use different colours? In R, one package that provides alternative colour palettes \index{color palette} is `RColorBrewer` [@RColorBrewer]. You can visualize the list of colour palettes that `RColorBrewer` has to offer with the `display.brewer.all` function. You can also print a list of colour blind friendly palettes by adding `colorblindFriendly = TRUE` to the function.
 
 ```{r}
 library(RColorBrewer)
-display.brewer.all(colorblindFriendly = T)
+display.brewer.all(colorblindFriendly = TRUE)
 ```
 
 From the output above, we can choose the colour palette we want to use in our plot. 
-To change the colour palette, we add the `scale_colour_brewer()` layer indicating the palette we want to use. 
+To change the colour palette, we add the `scale_colour_brewer` layer indicating the palette we want to use. 
+
 ```{r scatter-colour-by-category-palette, fig.width=7.75, fig.height=4, warning=FALSE,  fig.cap = "Scatter plot of percentage of Canadians reporting a language as their mother tongue vs the primary language at home coloured by language category with colour blind friendly colours"}
 ggplot(can_lang, aes(x = most_at_home_percent, y = mother_tongue_percent, color = category)) +
   geom_point() +
@@ -561,6 +589,7 @@ ggplot(can_lang, aes(x = most_at_home_percent, y = mother_tongue_percent, color 
 ```
 
 You can use this [color blindness simulator](https://www.color-blindness.com/coblis-color-blindness-simulator/) \index{color palette!color blindness simulator} to check if your visualizations are colour blind friendly.
+Additionally, the `ggthemes` R package also has a [color blind friendly color pallete](https://jrnold.github.io/ggthemes/reference/colorblind.html).
 
 From the visualization in Figure \@ref(fig:scatter-colour-by-category-palette), we can now clearly see that not just a lot, but that the majority of Canadians reported one of the official languages as their mother tongue and as the language they speak most often at home. 
 
